...
           FloatingActionButton(
               onClick = {
                    navController.navigate(Screen.AddEditNoteScreen.route)
               },
               backgroundColor = colors.surface
           ){
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add note",
                tint = colors.background)
           }
       },
       scaffoldState = scaffoldState
   ) {
        Column(
...
                    onClick = {
                        viewModel.onEvent(NotesEvent.ToggleOrderSection)
                    }
                ) {
                    Icon(
                        imageVector = Icons.Default.Sort,
                        contentDescription = "Sort",
                        tint = colors.surface
                    )
                }
            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
