...
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                },
                backgroundColor = MaterialTheme.colors.surface
            ) {
                Icon(
                    imageVector = Icons.Default.Save,
                    contentDescription = "Save note",
                    tint = MaterialTheme.colors.background
                )
            }
        },
        scaffoldState = scaffoldState
    ){
...
